--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Lab1b.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Lab1b.data.gz",
-        frameworkUrl: buildUrl + "/Lab1b.framework.js.gz",
-        codeUrl: buildUrl + "/Lab1b.wasm.gz",
+        dataUrl: buildUrl + "/Lab1b.data",
+        frameworkUrl: buildUrl + "/Lab1b.framework.js",
+        codeUrl: buildUrl + "/Lab1b.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "EIE3360LabB",
